--- a/frontend/src/app/pages/authentication/side-login/side-login.component.html
+++ b/frontend/src/app/pages/authentication/side-login/side-login.component.html
@@ -5,10 +5,10 @@
         <mat-card-content class="p-32">
           <div class="text-center">
             <a [routerLink]="['/dashboard']">
-              <img src="./assets/images/logos/logo.svg" class="align-middle m-2" alt="logo" />
+              <img src="./assets/images/logos/horizontal.png" style="width: 250px; height: auto;" class="align-middle m-2" alt="logo" />
             </a>
           </div>
-
+          <!--
           <div class="row m-t-24 custom-row">
             <div class="col-6">
               <button mat-stroked-button class="w-100">
@@ -26,34 +26,36 @@
                 </div>
               </button>
             </div>
-          </div>
+          </div> 
+          -->
 
-          <div class="or-border m-t-30">or sign in with</div>
+          <div class="m-t-10"></div>
 
-          <form class="m-t-30">
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Username</mat-label>
+          <form class="m-t-20">
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Usuario</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
               <input matInput />
             </mat-form-field>
             <!-- password -->
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Password</mat-label>
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Contraseña</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
               <input matInput type="password" />
             </mat-form-field>
-
+<!--
             <div class="d-flex align-items-center m-b-12">
-              <mat-checkbox color="primary">Remember this Device</mat-checkbox>
-              <a [routerLink]="['/']" class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14">Forgot Password
-                ?</a>
+              <mat-checkbox color="primary">Recordarme</mat-checkbox>
+              <a [routerLink]="['/']" class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14">¿Olvidaste tu contraseña?</a>
             </div>
-            <a [routerLink]="['/']" mat-flat-button color="primary" class="w-100">
-              Sign In
+
+            -->
+            <a [routerLink]="['/']" mat-flat-button class="w-100 custom-button">
+              Iniciar sesión
             </a>
             <!-- input -->
           </form>
-          <span class="d-block f-w-500 text-center m-t-24">New to MaterialM?
-            <a [routerLink]="['/authentication/register']" class="text-decoration-none text-primary f-w-500 f-s-14">
-              Create an account</a>
+          <span class="d-block f-w-500 text-center m-t-24">¿No tienes una cuenta?
+            <a [routerLink]="['/authentication/register']" class="text-decoration-none text-secondary f-w-500 f-s-14">
+              Registrarme</a>
           </span>
         </mat-card-content>
       </mat-card>
