--- a/frontend/src/assets/scss/pages/_auth.scss
+++ b/frontend/src/assets/scss/pages/_auth.scss
@@ -3,7 +3,10 @@
 .blank-layout-container {
   height: 100vh;
   display: flex;
+  background-image: url('../../images/backgrounds/Paisaje.jpg'); // ajusta la ruta
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   align-items: center;
 }
 
@@ -56,7 +59,7 @@
 
 .boxed-auth {
   width: 100%;
-  max-width: 480px;
+  max-width: 350px;
   margin: 0 auto;
 }
 
@@ -70,5 +73,21 @@
   .mdc-notched-outline__notch,
   .mdc-notched-outline__trailing {
     border-color: $error !important;
+  }
+}
+
+.cardWithShadow  {
+  background-color: rgba(255, 255, 255, 0.6) !important;// Blanco con 80% de opacidad
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2)  !important;// Sombra suave
+  border-radius: 12px!important;
+  backdrop-filter: blur(8px) !important;// Opcional: efecto de desenfoque tipo "glass"
+}
+
+.custom-button {
+  background-color: #14c85f !important; // tu color personalizado
+  color: white !important;
+
+  &:hover {
+    background-color: rgb(31, 163, 51) !important; // color en hover
   }
 }
